--- a/src/Components/Header1/header.css
+++ b/src/Components/Header1/header.css
@@ -7,14 +7,14 @@
   justify-content: space-between;
   align-items: center;
   background-color: transparent;
-  width: 100%;
+  width: 90%;
 }
 
 .sticky {
   //position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 99%;
   opacity: 50;
   background: #002060;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for a raised effect */
@@ -56,7 +56,7 @@ nav > ul > li {
   position: relative;
 }
 nav > ul > li > a {
-  padding: 0px 24px;
+  padding: 0px 1rem;
   display: block;
 }
 
@@ -79,12 +79,12 @@ nav ul li ul {
 nav ul li ul li {
   margin-top: 1rem;
   text-align: left;
-  margin-left: 0;
+  margin-left: -1rem;
   width: 100%;
 }
 nav ul li ul li a {
-  padding: 1.2rem 1rem;
-  font-size: 16px;
+  padding: 1.4rem 1.4rem 0 0;
+  font-size: 14px;
 }
 nav ul li:hover ul {
   display: block;
@@ -112,22 +112,22 @@ ul li a:hover::after {
 }
 
 .btn {
-  width: 9rem;
+  width: 8rem;
   height: 35px;
-  font-size: 18px;
+  font-size: 14px;
   transition: all 0.3 ease;
   cursor: pointer;
-  background-color: #fff;
+  background: #ffffff;
   border-radius: 20px;
   color: #002060;
-  margin-top: 0.2rem;
+  margin-top: 0.1rem;
   &:hover {
     background-color: #fff;
   }
 }
 
 .links {
-  padding: 1.2rem 0.2rem;
+  padding: 0.6rem 0.2rem;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -135,11 +135,11 @@ ul li a:hover::after {
 
 .links-logo {
   margin-right: 0.1rem;
-  margin-left: -1rem;
+  margin-left: -2rem;
 }
 
 .links-logo img {
-  width: 140px;
+  width: 110px;
   height: 60px;
 }
 
@@ -203,7 +203,7 @@ ul li a:hover::after {
   background: #ccc;
   padding: 2rem;
   position: absolute;
-  top: 40px;
+  top: 20px;
   right: 0;
   margin-top: 1rem;
   min-width: 210px;
@@ -229,6 +229,9 @@ ul li a:hover::after {
   flex-direction: column;
 }
 @media screen and (max-width: 1050px) {
+  .container {
+    padding: 2rem 4rem;
+  }
   nav ul {
     flex-wrap: wrap;
   }
