--- a/src/Page/Pricipal/Contato/formulario.css
+++ b/src/Page/Pricipal/Contato/formulario.css
@@ -17,21 +17,21 @@
   z-index: 0;
 }
 .texto {
-  width: 900px;
-  padding: 30px;
+  width: 54rem;
+  padding: 1.8rem;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 18px;
 }
 .title {
-  margin-bottom: 14px;
+  margin-bottom: 0.8rem;
 }
 .containerDiv {
-  width: 860px;
-  padding: 40px;
+  width: 53.7rem;
+  padding: 2.2rem;
   background: #fff;
-  margin-bottom: 10px;
+  margin-bottom: 0.8rem;
   flex-direction: column;
   display: flex;
   justify-content: center;
@@ -39,7 +39,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .form {
-  max-width: 600px;
+  max-width: 37.5rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -48,8 +48,8 @@
   margin-left: 1rem;
 }
 .input {
-  margin-bottom: 14px;
-  height: 34px;
+  margin-bottom: 0.9rem;
+  height: 1.8rem;
   border-radius: 4px;
   border: 0;
   padding: 0 8px;
@@ -62,7 +62,7 @@
   border: 3px solid #555;
 }
 .textarea {
-  margin-bottom: 14px;
+  margin-bottom: 0.9rem;
   border-radius: 4px;
   border: 0;
   padding: 8px;
@@ -78,9 +78,9 @@
 }
 
 .button {
-  border-radius: 20px;
+  border-radius: 1.2rem;
   color: white;
-  height: 34px;
+  height: 2rem;
   border: 0;
   cursor: pointer;
   background-color: #0c3b99;
@@ -91,4 +91,13 @@
 .button:hover {
   background-color: #06238f;
   transform: scale(1.01);
+}
+@media (max-width: 768px) {
+  .containerDiv {
+    width: 26rem;
+    padding: 1rem;
+  }
+  .texto {
+    width: 26rem;
+  }
 }
