--- a/src/Components/Header1/header.css
+++ b/src/Components/Header1/header.css
@@ -248,6 +248,9 @@ ul li a:hover::after {
 }
 
 @media screen and (max-width: 700px) {
+  .header {
+    background-color: #002060;
+  }
   .container {
     padding: 2rem 4rem;
   }
@@ -340,7 +343,9 @@ ul li a:hover::after {
   .header {
     padding: 2rem 4rem;
   }
-
+  .sticky {
+    whidth: 80%;
+  }
   .nav-button {
     display: none;
   }
