--- a/src/Components/Header1/header.css
+++ b/src/Components/Header1/header.css
@@ -7,14 +7,14 @@
   justify-content: space-between;
   align-items: center;
   background-color: transparent;
-  width: 90%;
+  width: 99vw;
 }
 
 .sticky {
   //position: fixed;
   top: 0;
   left: 0;
-  width: 99%;
+  width: 99vw;
   opacity: 50;
   background: #002060;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for a raised effect */
@@ -95,7 +95,7 @@ ul li a::after {
   content: "";
   top: 100%;
   left: 24px;
-  width: 64%;
+  width: 44%;
   height: 3px;
   background: #ffff00;
   transform: scaleX(0);
@@ -133,32 +133,32 @@ ul li a:hover::after {
   align-items: center;
 }
 
-.links-logo {
+.links_logo {
   margin-right: 0.1rem;
   margin-left: -2rem;
 }
 
-.links-logo img {
+.links_logo img {
   width: 110px;
   height: 60px;
 }
 
-.links-wrapper {
+.links_wrapper {
   display: flex;
   flex-direction: row;
   margin: auto 0;
 }
 
-.nav-button {
+.nav_button {
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
 
-.links-wrapper ul li,
-.nav-button li,
-.nav-menu-wrapper li a {
-  color: #333333;
+.links_wrapper ul li,
+.nav_button li,
+.nav_menu_wrapper li a {
+  color: #333;
   font-weight: 500;
   font-size: 18px;
   line-height: 25px;
@@ -170,12 +170,12 @@ ul li a:hover::after {
   flex-direction: column;
 }
 
-.nav-menu-wrapper li a {
+.nav_menu_wrapper li a {
   color: #fff;
 }
 
-.nav-button button,
-.nav-menu-wrapper button {
+.nav_button button,
+.nav_menu_wrapper button {
   padding: 0.5rem 2rem;
   color: #fff;
   background-color: #ccc;
@@ -188,13 +188,13 @@ ul li a:hover::after {
   cursor: pointer;
 }
 
-.nav-menu {
+.nav_menu {
   margin-left: 1rem;
   display: none;
   position: relative;
 }
 
-.nav-menu-wrapper {
+.nav_menu_wrapper {
   display: block;
   justify-content: flex-end;
   align-items: flex-end;
@@ -211,18 +211,18 @@ ul li a:hover::after {
   box-shadow: 0 0 0 5 rgba(0, 0, 0, 0.2);
 }
 
-.nav-menu-wrapper li a {
+.nav_menu_wrapper li a {
   width: 100%;
   margin: 1rem 0;
   text-decoration: none;
   display: flex;
 }
 
-.nav-menu-wrapper-button {
+.nav_menu_wrapper_button {
   display: none;
 }
 
-.nav-menu-wrapper-links {
+.nav_menu_wrapper_links {
   width: 100%;
   flex-wrap: wrap;
   display: flex;
@@ -236,13 +236,13 @@ ul li a:hover::after {
     flex-wrap: wrap;
   }
 
-  .links-wrapper {
+  .links_wrapper {
     display: none;
   }
-  .nav-menu-wrapper {
+  .nav_menu_wrapper {
     display: block;
   }
-  .nav-menu {
+  .nav_menu {
     display: flex;
   }
 }
@@ -252,7 +252,7 @@ ul li a:hover::after {
     background-color: #002060;
   }
   .container {
-    padding: 2rem 4rem;
+    padding: 1rem 1rem;
   }
   nav ul li ul {
     position: absolute;
@@ -270,18 +270,18 @@ ul li a:hover::after {
 
 @media screen and (max-width: 550px) {
   .container {
-    padding: 2rem 4rem;
+    padding: 1rem 1rem;
   }
 
-  .nav-button {
+  .nav_button {
     display: none;
   }
 
-  .nav-menu-wrapper {
+  .nav_menu_wrapper {
     top: 20px;
   }
 
-  .nav-menu-wrapper-button {
+  .nav_menu_wrapper_button {
     display: block;
   }
 }
@@ -291,19 +291,19 @@ ul li a:hover::after {
     display: flex;
   }
 }
-.nav-menu {
+.nav_menu {
   margin-left: 1rem;
   display: none;
   position: relative;
 }
 
-.nav-menu-wrapper {
+.nav_menu_wrapper {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
   flex-direction: column;
   text-align: end;
-  background: #ccc;
+  background: #002060;
   padding: 2rem;
   position: absolute;
   top: 40px;
@@ -314,21 +314,21 @@ ul li a:hover::after {
   box-shadow: 0 0 0 5 rgba(0, 0, 0, 0.2);
 }
 
-.nav-menu-wrapper li a {
+.nav_menu_wrapper li a {
   margin: 1rem 0;
   text-decoration: none;
 }
 
-.nav-menu-wrapper-button {
+.nav_menu_wrapper_button {
   display: none;
 }
 
 @media screen and (max-width: 1050px) {
-  .links-wrapper {
+  .links_wrapper {
     display: none;
   }
 
-  .nav-menu {
+  .nav_menu {
     display: flex;
   }
 }
@@ -336,6 +336,9 @@ ul li a:hover::after {
 @media screen and (max-width: 700px) {
   .header {
     padding: 2rem 4rem;
+  }
+  .nav_menu_wrapper {
+    min-width: 50px;
   }
 }
 
@@ -346,11 +349,27 @@ ul li a:hover::after {
   .sticky {
     whidth: 80%;
   }
-  .nav-button {
+  .nav_button {
     display: none;
   }
 
-  .nav-menu-wrapper {
+  .nav_menu_wrapper {
+    top: 20px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .header {
+    padding: 2rem 4rem;
+  }
+  .sticky {
+    whidth: 80%;
+  }
+  .nav_button {
+    display: none;
+  }
+
+  .nav_menu_wrapper {
     top: 20px;
   }
 }
