--- a/src/Components/Slider/slider.css
+++ b/src/Components/Slider/slider.css
@@ -1,9 +1,11 @@
 .swiper {
   height: auto;
+  z-index: 20;
 }
 .swiper .swiper-slide {
   padding-top: 5rem;
   padding-bottom: 2rem;
+  z-index: 20;
 }
 
 .swiper-pagination-bullet-active {
